save stop to fav

--- a/src/app/components/fav-stop-card/fav-stop-card.component.html
+++ b/src/app/components/fav-stop-card/fav-stop-card.component.html
@@ -1,5 +1,7 @@
 <!-- LINE -->
-<ion-card button class="shadow" color="white" style="margin-top: 15px;">
+<ion-card button class="shadow"
+          color="white" style="margin-top: 15px;"
+          (click)="removeFavouriteStop(event, '1', favStop.stop_id, favStop)">
   <ion-card-content class="ion-no-padding">
     <ion-grid>
       <ion-row class="ion-no-padding divider">
