fix onboarding screen

--- a/src/app/pages/line-detail/line-detail.page.html
+++ b/src/app/pages/line-detail/line-detail.page.html
@@ -4,7 +4,7 @@
       <ion-back-button defaultHref="/tabs/lines"></ion-back-button>
     </ion-buttons>
     <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
-    <ion-title class='titleColor'>Linka {{idLine}}</ion-title>
+    <ion-title class='titleColor'>Linka {{lineStops.name}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,7 +13,7 @@
       <ion-row class="ion-no-padding stop-detail">
         <ion-col size="2">
           <div class='lineSquereIcon padding-top'>
-            <div class='SquereIconText'>{{idLine}}</div>
+            <div class='SquereIconText'>{{lineStops.name}}</div>
           </div>
         </ion-col>
         <ion-col size="8" class=''>
