fix id name line in fav

--- a/src/app/components/fav-line-card/fav-line-card.component.html
+++ b/src/app/components/fav-line-card/fav-line-card.component.html
@@ -1,11 +1,11 @@
 <!-- Stop card -->
-<ion-card button class="shadow" color="white">
+<ion-card button class="shadow" color="white" class="ion-padding">
   <ion-card-content class="ion-no-padding">
     <ion-grid *ngIf="favLine">
       <ion-row class="ion-no-padding divider">
         <ion-col size="2">
           <div class='lineSquereIcon'>
-            <div class='SquereIconText'>{{favLine.line_id}}</div>
+            <div class='SquereIconText'>{{favLine.line_number}}</div>
           </div>
         </ion-col>
         <ion-col size="8">
