--- a/src/app/pages/timetable/timetable.page.html
+++ b/src/app/pages/timetable/timetable.page.html
@@ -6,7 +6,7 @@
       </ion-back-button>
     </ion-buttons>
     <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
-    <ion-title class='titleColor'>Linka {{idLine}}, Grafikon</ion-title>
+    <ion-title class='titleColor'>Linka {{lineData}}, Grafikon</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +15,7 @@
       <ion-row class="ion-no-padding stop-detail">
         <ion-col size="2">
           <div class='lineSquereIcon padding-top'>
-            <div class='SquereIconText'>{{idLine}}</div>
+            <div class='SquereIconText'>{{lineData}}</div>
           </div>
         </ion-col>
         <ion-col size="8" class=''>
