--- a/src/global.scss
+++ b/src/global.scss
@@ -869,7 +869,7 @@ h4 {
 
         p {
             color: #464B62;
-            margin: 10px;
+            margin: 5px;
             font-size: 1.0rem;
             background: white;
             border: none;
@@ -1058,7 +1058,7 @@ h4 {
   text-align: left;
   text-decoration: none;
   padding-top: 5px;
-  padding-left: 10px;
+  text-align: center;
 }
 
 .active {
