add back button from map and small fixes

--- a/src/app/pages/stop-detail/stop-detail.page.html
+++ b/src/app/pages/stop-detail/stop-detail.page.html
@@ -4,6 +4,7 @@
      <ion-back-button defaultHref="/tabs/stops"></ion-back-button>
    </ion-buttons>
    <ion-buttons slot="start" *ngIf="fromMap">
+     <ion-back-button defaultHref="/tabs/map"></ion-back-button>
    </ion-buttons>
    <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
    <ion-title class='titleColor'>Zastávky</ion-title>
