--- a/src/app/components/fav-line-card/fav-line-card.component.html
+++ b/src/app/components/fav-line-card/fav-line-card.component.html
@@ -10,7 +10,7 @@
         </ion-col>
         <ion-col size="8">
           <div class="ion-text-nowrap">
-            <h3 class="bold">Televízia</h3>
+            <h3 class="bold">{{favLine.selected_stop}}</h3>
           </div>
           <div class="multi-ellipsis">
             <ion-text color="darkGrey">
